--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="com.sekhgmainuddin.learnwithfun.presentation.login.LoginSignUpViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.login.fragments.LoginFragment"
         android:background="@drawable/background"
-        android:id="@+id/parent_layout">
+        tools:context=".presentation.login.fragments.LoginFragment">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loginAnimation"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginVertical="30dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/horizontalGuideline30"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:lottie_rawRes="@raw/splash_animation"
-            app:lottie_autoPlay="true" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_rawRes="@raw/splash_animation" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/horizontalGuideline30"
@@ -38,131 +42,119 @@
             android:id="@+id/welcomeTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline30"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:fontFamily="sans-serif-medium"
             android:text="@string/welcome_to_learn_with_fun"
             android:textAlignment="center"
             android:textSize="24sp"
-            android:fontFamily="sans-serif-medium" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline30" />
 
         <TextView
             android:id="@+id/descOne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/welcomeTV"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textAlignment="center"
-            android:layout_marginTop="5dp"
             android:layout_marginHorizontal="40dp"
-            android:textSize="16sp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/shantellsans_regular"
-            android:text="@string/learning_is_more_effective_when_it_is_active_rather_than_a_passive_process" />
+            android:text="@string/learning_is_more_effective_when_it_is_active_rather_than_a_passive_process"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/welcomeTV" />
 
         <TextView
             android:id="@+id/descTwo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
             android:layout_margin="20dp"
-            app:layout_constraintTop_toBottomOf="@id/descOne"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/learn_with_fun_login_desc"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/descOne" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/phoneNumberCV"
+        <LinearLayout
+            android:id="@+id/phoneNumberLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/descTwo"
-            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/gradient_border_ll"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingVertical="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:cardBackgroundColor="@android:color/transparent"
-            android:background="@android:color/transparent"
-            app:cardElevation="0dp">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/descTwo">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/ccp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="5dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="@drawable/gradient_border_ll">
+                app:ccp_autoDetectCountry="true"
+                app:ccp_showNameCode="false" />
 
-                <com.hbb20.CountryCodePicker
-                    android:id="@+id/ccp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:ccp_countryPreference="in"
-                    app:ccp_showNameCode="false"
-                    app:ccp_autoDetectCountry="true" />
+            <EditText
+                android:id="@+id/phoneEditText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:autofillHints="phone"
+                android:background="@android:color/transparent"
+                android:hint="@string/mobile_number"
+                android:inputType="phone"
+                android:maxLines="1"
+                android:paddingHorizontal="5dp" />
 
-                <EditText
-                    android:id="@+id/phoneEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/mobile_number"
-                    android:inputType="phone"
-                    android:autofillHints="phone"
-                    android:maxLines="1"
-                    android:background="@android:color/transparent"
-                    android:paddingHorizontal="5dp"
-                    />
-
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/sendOtpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/phoneNumberCV"
-            app:layout_constraintEnd_toEndOf="@id/phoneNumberCV"
-            app:cornerRadius="10dp"
             android:text="@string/send_otp"
             android:textAllCaps="false"
             android:visibility="visible"
-            />
+            app:cornerRadius="10dp"
+            app:layout_constraintEnd_toEndOf="@id/phoneNumberLayout"
+            app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
 
         <TextView
             android:id="@+id/otpTimeLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/phoneNumberCV"
             android:layout_marginTop="5dp"
-            android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/phoneNumberCV"
+            android:text="@{viewModel.otpTimeLeft}"
             android:textStyle="bold"
-            android:text="00:59" />
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="@id/phoneNumberLayout"
+            app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
 
         <TextView
             android:id="@+id/otpTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="@string/otp_verification"
-            app:layout_constraintTop_toBottomOf="@id/otpTimeLeft"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/otp_verification"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/otpTimeLeft" />
 
         <TextView
             android:id="@+id/otpDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="@string/enter_six_digit_otp_send_on_your_mobile_number"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/otpTitle"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:text="@string/enter_six_digit_otp_send_on_your_mobile_number"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/otpTitle" />
 
         <com.sekhgmainuddin.learnwithfun.common.customviews.OtpEditText
             android:id="@+id/otpView"
@@ -189,14 +181,14 @@
             android:id="@+id/continueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginBottom="15dp"
+            android:padding="15dp"
             android:text="@string/continue_"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:cornerRadius="10dp"
-            android:padding="15dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
