--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -8,10 +8,11 @@
         android:background="@color/progress_dialog_background">
 
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
+            app:lottie_speed="1.5"
             app:lottie_rawRes="@raw/loading_animation"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
