--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,176 +12,192 @@
             type="com.sekhgmainuddin.learnwithfun.presentation.login.LoginSignUpViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
+        android:orientation="vertical"
         tools:context=".presentation.login.fragments.LoginFragment">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/loginAnimation"
-            android:layout_width="wrap_content"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginVertical="30dp"
-            app:layout_constraintBottom_toTopOf="@id/horizontalGuideline30"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:lottie_autoPlay="true"
-            app:lottie_rawRes="@raw/splash_animation" />
+            android:layout_weight="1">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/horizontalGuideline30"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.3" />
-
-        <TextView
-            android:id="@+id/welcomeTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/welcome_to_learn_with_fun"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline30" />
-
-        <TextView
-            android:id="@+id/descOne"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/shantellsans_regular"
-            android:text="@string/learning_is_more_effective_when_it_is_active_rather_than_a_passive_process"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/welcomeTV" />
-
-        <TextView
-            android:id="@+id/descTwo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="@string/learn_with_fun_login_desc"
-            android:textAlignment="center"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/descOne" />
-
-        <LinearLayout
-            android:id="@+id/phoneNumberLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/gradient_border_ll"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingVertical="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/descTwo">
-
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/ccp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:ccp_autoDetectCountry="true"
-                app:ccp_showNameCode="false" />
-
-            <EditText
-                android:id="@+id/phoneEditText"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:autofillHints="phone"
-                android:background="@android:color/transparent"
-                android:hint="@string/mobile_number"
-                android:inputType="phone"
-                android:maxLines="1"
-                android:paddingHorizontal="5dp" />
+                android:paddingBottom="50dp">
 
-        </LinearLayout>
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/loginAnimation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="175dp"
+                    android:layout_marginVertical="30dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:lottie_autoPlay="true"
+                    app:lottie_rawRes="@raw/splash_animation" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/sendOtpButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/send_otp"
-            android:textAllCaps="false"
-            android:visibility="visible"
-            app:cornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="@id/phoneNumberLayout"
-            app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
+                <TextView
+                    android:id="@+id/welcomeTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@string/welcome_to_learn_with_fun"
+                    android:textAlignment="center"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/loginAnimation" />
 
-        <TextView
-            android:id="@+id/otpTimeLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@{viewModel.otpTimeLeft}"
-            android:textStyle="bold"
-            android:textColor="@color/darkGrey"
-            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
-            app:layout_constraintStart_toStartOf="@id/phoneNumberLayout"
-            app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
+                <TextView
+                    android:id="@+id/descOne"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="40dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/shantellsans_regular"
+                    android:text="@string/learning_is_more_effective_when_it_is_active_rather_than_a_passive_process"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/welcomeTV" />
 
-        <TextView
-            android:id="@+id/otpTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/otp_verification"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/darkGrey"
-            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/otpTimeLeft" />
+                <TextView
+                    android:id="@+id/descTwo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:text="@string/learn_with_fun_login_desc"
+                    android:textAlignment="center"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/descOne" />
 
-        <TextView
-            android:id="@+id/otpDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/enter_six_digit_otp_send_on_your_mobile_number"
-            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/otpTitle" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/phoneNumberLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/descTwo">
 
-        <com.otpview.OTPTextView
-            android:id="@+id/otpView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            app:otp_text_size="18sp"
-            app:otp_box_background="@drawable/bg_otp_box"
-            app:otp_box_background_active="@drawable/bg_otp_box_active"
-            app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
-            app:otp_box_background_error="@drawable/bg_otp_box_error"
-            app:otp_box_background_success="@drawable/bg_otp_box_success"
-            app:hide_otp_drawable="@drawable/bg_otp_box_hide"
-            app:height="45dp"
-            app:width="40dp"
-            app:box_margin="6dp"
-            app:hide_otp="false"
-            app:length="6"
-            app:otp=""
-            android:layout_marginTop="10dp"
-            android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/otpDescription"
-            />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/gradient_border_ll"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingVertical="5dp">
+
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="40dp"
+                            android:src="@drawable/indian_flag"
+                            android:layout_marginHorizontal="5dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/_91"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"/>
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/phoneEditText"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:autofillHints="phone"
+                            android:hint="@string/mobile_number"
+                            android:inputType="phone"
+                            android:maxLines="1"
+                            android:padding="0dp"/>
+
+                    </LinearLayout>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/sendOtpButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/send_otp"
+                    android:textAllCaps="false"
+                    android:visibility="gone"
+                    app:cornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="@id/phoneNumberLayout"
+                    app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
+
+                <TextView
+                    android:id="@+id/otpTimeLeft"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="@{viewModel.otpTimeLeft}"
+                    android:textColor="@color/darkGrey"
+                    android:textStyle="bold"
+                    android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
+                    app:layout_constraintStart_toStartOf="@id/phoneNumberLayout"
+                    app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
+
+                <TextView
+                    android:id="@+id/otpTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/otp_verification"
+                    android:textColor="@color/darkGrey"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/otpTimeLeft" />
+
+                <TextView
+                    android:id="@+id/otpDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/enter_six_digit_otp_send_on_your_mobile_number"
+                    android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/otpTitle" />
+
+                <com.otpview.OTPTextView
+                    android:id="@+id/otpView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@android:color/black"
+                    android:visibility="@{viewModel.otpTimeLeft!=null ? View.VISIBLE : View.GONE, default=visible}"
+                    app:box_margin="6dp"
+                    app:height="45dp"
+                    app:hide_otp="false"
+                    app:hide_otp_drawable="@drawable/bg_otp_box_hide"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/otpDescription"
+                    app:length="6"
+                    app:otp=""
+                    app:otp_box_background="@drawable/bg_otp_box"
+                    app:otp_box_background_active="@drawable/bg_otp_box_active"
+                    app:otp_box_background_error="@drawable/bg_otp_box_error"
+                    app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
+                    app:otp_box_background_success="@drawable/bg_otp_box_success"
+                    app:otp_text_size="18sp"
+                    app:width="40dp" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/continueButton"
@@ -196,5 +212,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
