--- a/app/src/main/res/layout/course_list_item_view.xml
+++ b/app/src/main/res/layout/course_list_item_view.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
-        <import type="com.sekhgmainuddin.learnwithfun.common.utils.Utils" />
-
         <import type="android.view.View" />
 
         <import type="com.sekhgmainuddin.learnwithfun.R" />
@@ -72,22 +70,30 @@
                 android:layout_margin="10dp"
                 app:layout_constraintBottom_toBottomOf="@id/courseThumbnail"
                 app:layout_constraintStart_toStartOf="@id/courseThumbnail"
-                app:shapeAppearanceOverlay="@style/circularImageView" />
+                app:shapeAppearanceOverlay="@style/circularImageView"
+                app:imageUrl="@{course.instructorProfilePicture}"
+                app:progressBar="@{null}"/>
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/instructorName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/views_and_likes_background"
-                android:ellipsize="end"
+                android:ellipsize="marquee"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                app:makeSelectedAutomatically="@{true}"
                 android:fontFamily="@font/shantellsans_regular"
                 android:text="@{@string/by(course.instructorName)}"
                 android:textAlignment="viewStart"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="@id/courseThumbnail"
-                app:layout_constraintEnd_toStartOf="@+id/textView"
-                app:layout_constraintStart_toEndOf="@id/instructorImage" />
+                app:layout_constraintStart_toEndOf="@id/instructorImage"
+                android:maxWidth="150dp"
+                />
 
             <TextView
                 android:id="@+id/textView"
@@ -98,7 +104,7 @@
                 android:drawableEnd="@drawable/discount_icon_24"
                 android:drawablePadding="5dp"
                 android:fontFamily="@font/noto_sans_semi_bold"
-                android:text="@{String.valueOf(course.discount)"
+                android:text="@{@string/discount_off((course.discount - (int)course.discount>0) ? String.format(`%.2f`, course.discount) : String.valueOf((int)course.discount))}"
                 android:textColor="@color/science_blue"
                 android:textSize="14sp"
                 android:visibility="@{course.discount>0 ? View.VISIBLE : View.GONE}"
@@ -155,12 +161,10 @@
                 android:paddingEnd="10dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:text="500"
+                app:actualPriceOfCourse="@{course.price}"
+                app:givenDiscount="@{course.discount}"
                 app:layout_constraintStart_toEndOf="@id/actualPriceTag"
-                app:layout_constraintTop_toBottomOf="@id/courseDesc"/>
-<!--                app:full_text="@{@string/price(Utils.INSTANCE.getCurrentPrice(course.price, course.discount))}"-->
-<!--                app:span_color="@{R.color.gold}"-->
-<!--                app:span_text="@{`\u20B9`}" />-->
+                app:layout_constraintTop_toBottomOf="@id/courseDesc" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -170,8 +174,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/currentPriceTag"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/currentPriceTag"
-                app:studentsEnrolled="@{course.studentsEnrolled.totalCount}"
-                />
+                app:studentsEnrolled="@{course.studentsEnrolled.totalCount}" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/enrollButton"
